# tourmas-datarepo

./: .aiderrules  .gitignore  README.md  card_data.json  flake.nix  index.html  pyproject.toml
.github/workflows/: deploy.yaml  validate_card_data.yml
card_data/: accessory.toml  costume.toml  sp_appeal.toml  support.toml
docs/: CONTRIBUTION.md
docs/rules/: README.md  card_data.md
generate/: card_data.py
validators/: card_data.py  pyproject.toml
