[project]
name = "tourmas-datarepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.3"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.flake8]
select = ["E", "F"]
ignore = []
extend-select = []
extend-ignore = []

[dependency-groups]
dev = ["python-lsp-server>=1.12.2"]
